--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,20 @@ services:
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: "/var/lib/weaviate"
       DEFAULT_VECTORIZER_MODULE: text2vec-transformers
-      ENABLE_MODULES: text2vec-transformers
+      ENABLE_MODULES: text2vec-transformers,qna-transformers
       TRANSFORMERS_INFERENCE_API: http://t2v-transformers:8080
+      QNA_INFERENCE_API: "http://qna-transformers:8080"
       CLUSTER_HOSTNAME: 'node1'
     volumes:
       - /var/weaviate:/var/lib/weaviate
   t2v-transformers:
     image: semitechnologies/transformers-inference:sentence-transformers-msmarco-distilroberta-base-v2
     environment:
-      ENABLE_CUDA: 0 # set to 1 to enable
-      # NVIDIA_VISIBLE_DEVICES: all # enable if running with CUDA
-      # etc
+      ENABLE_CUDA: 0
+  qna-transformers:
+    image: semitechnologies/qna-transformers:bert-large-uncased-whole-word-masking-finetuned-squad
+    environment:
+      ENABLE_CUDA: 0
   prometheus:
     image: prom/prometheus:v2.36.2
     volumes:
