:poop: work on migration to spring boot/docker backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
 version: '3.4'
 services:
   api:
-    image: 'semanticsearch:latest'
     build:
       context: .
     container_name: 'api'
     ports:
-      - '8080:8080'
+      - '80:80'
+      - '5005:5005'
+    depends_on:
+      - weaviate
   weaviate:
     image: semitechnologies/weaviate:1.18.3
     command:
       - --host
       - 0.0.0.0
       - --port
-      - '2000'
+      - '8080'
       - --scheme
       - http
     ports:
-      - "2000:2000"
+      - "8080:8080"
     restart: on-failure:0
     environment:
       PROMETHEUS_MONITORING_ENABLED: 'true'
